tests/expected_output/clang-8.0-x86_64-pc-linux-gnu/assert_without_closing_parenthesis.txt
tests/extracted_compile_time_tests/assert_without_closing_parenthesis.c:5:2: error: unterminated function-like macro invocation
        assert(argc == 1;
        ^
dcc explanation: it looks like there is a missing closing bracket on the assert on line 5 of tests/extracted_compile_time_tests/assert_without_closing_parenthesis.c
